# Orchestr-AI

./: .gitignore  README.md
agent_server/: .env.template  Dockerfile.dev  docker-compose.dev.yml
agent_server/app/: main.py  pyproject.toml  railway.json
agent_server/app/api/: constants.py  health.py  routes.py
agent_server/app/core/: config.py  custom_exceptions.py  decorators.py  language_model.py
agent_server/app/services/agents/: schema.py  service.py
agent_server/app/services/seoadvisor/: dependencies.py  router.py  service.py
agent_server/app/services/voyager/: agent.py  dependencies.py  router.py  schema.py  scraper.py  service.py
agent_server/app/services/webresearcher/: dependencies.py  router.py  service.py
contracts/: README.md  hardhat.config.cts  package.json
contracts/script/: deploy_and_test.ts
contracts/src/: Orchestrator.sol
orchestrator-server/: .gitignore  package.json
orchestrator-server/src/: app.module.ts  main.ts
orchestrator-server/src/agents/: agents.controller.ts  agents.module.ts  agents.service.ts
orchestrator-server/src/attestation/: attestation.service.ts
orchestrator-server/src/encryption/: encryption.service.ts
orchestrator-server/src/key-value-store/: key-value-store.module.ts  key-value-store.service.ts
orchestrator-server/src/langchain/: langchain.service.ts
orchestrator-server/src/lit-protocol/: lit-protocol.module.ts  (+1 more)
specialized-agent/: agent.js  github_interaction.js  package-lock.json  package.json  server.js  sha.txt  utils.js  wallet_data_1.txt  wallet_data_2.txt
webapp/: package.json
(+15 files in other folders)
